--- a/templates/admin/login.html
+++ b/templates/admin/login.html
@@ -6,63 +6,65 @@
 {% block bodyclass %}login{% endblock %}
 
 {% block basecontent %}
-<div>
-  <a class="hiddenanchor" id="signup"></a>
-  <a class="hiddenanchor" id="signin"></a>
+    <div>
+        <a class="hiddenanchor" id="signup"></a>
+        <a class="hiddenanchor" id="signin"></a>
 
-  <div class="login_wrapper">
-    <div class="animate form login_form">
-      <section class="login_content">
-        <form action="{{ app_path }}" method="post" id="login-form">{% csrf_token %}
-          <h1>{% trans "Inicio de sesión" %}</h1>
+        <div class="login_wrapper">
+            <div class="animate form login_form">
+                <section class="login_content">
+                    <form action="{{ app_path }}" method="post" id="login-form">{% csrf_token %}
+                        <h1>{% trans "Inicio de sesión" %}</h1>
 
-          {% if form.errors and not form.non_field_errors %}
-          <div class="alert alert-danger alert-dismissible fade in" role="alert">
-            <p>
-            {% if form.errors.items|length == 1 %}
-              {% trans "Please correct the error below." %}
-            {% else %}
-              {% trans "Please correct the errors below." %}
-            {% endif %}
-            </p>
+                        {% if form.errors and not form.non_field_errors %}
+                            <div class="alert alert-danger alert-dismissible fade in" role="alert">
+                                <p>
+                                    {% if form.errors.items|length == 1 %}
+                                        {% trans "Please correct the error below." %}
+                                    {% else %}
+                                        {% trans "Please correct the errors below." %}
+                                    {% endif %}
+                                </p>
 
-            {% if form.non_field_errors %}
-              {% for error in form.non_field_errors %}
-                <p>{{ error }}</p>
-              {% endfor %}
-            {% endif %}
-          </div>
-          {% endif %}
+                                {% if form.non_field_errors %}
+                                    {% for error in form.non_field_errors %}
+                                        <p>{{ error }}</p>
+                                    {% endfor %}
+                                {% endif %}
+                            </div>
+                        {% endif %}
 
-          <div class="fieldWrapper">
-            <input type="text" class="form-control" placeholder="{% trans "username" %}" required id="id_username" name="username" />
-            {{ form.username.errors }}
-          </div>
-          <div class="fieldWrapper">
-            <input type="password" class="form-control" placeholder="{% trans "password" %}" required id="id_password" name="password"/>
-            {{ form.password.errors }}
-          </div>
-          <div>
-            <!--<input type="hidden" name="next" value="{{ next }}" /> -->
-            <input type="hidden" name="next" value="/admin/auth/user" />
-            <input type="submit" class="btn btn-default submit" style="float:none;margin-left:0" value="{% trans 'Log in' %}" ></input>
-          </div>
+                        <div class="fieldWrapper">
+                            <input type="text" class="form-control" placeholder="{% trans "username" %}" required
+                                   id="id_username" name="username"/>
+                            {{ form.username.errors }}
+                        </div>
+                        <div class="fieldWrapper">
+                            <input type="password" class="form-control" placeholder="{% trans "password" %}" required
+                                   id="id_password" name="password"/>
+                            {{ form.password.errors }}
+                        </div>
+                        <div>
+                            <input type="hidden" name="next" value="{{ next }}"/>
+                            <input type="submit" class="btn btn-default submit" style="float:none;margin-left:0"
+                                   value="{% trans 'Log in' %}"/>
+                        </div>
 
-          <div class="clearfix"></div>
-     
-          <div class="separator">
-           
-            <div class="clearfix"></div>
-            <br />
+                        <div class="clearfix"></div>
 
-            <div>
-              <h1><i class="fa fa-dashboard"></i> AGUILA </h1>
-              <p>©2017 todos los derechos reservados.</p>
+                        <div class="separator">
+
+                            <div class="clearfix"></div>
+                            <br/>
+
+                            <div>
+                                <h1><i class="fa fa-dashboard"></i> AGUILA </h1>
+                                <p>©2017 todos los derechos reservados.</p>
+                            </div>
+                        </div>
+                    </form>
+                </section>
             </div>
-          </div>
-        </form>
-      </section>
+        </div>
     </div>
-  </div>
-</div>
 {% endblock %}
