refactoring to html code

--- a/travel/templates/travel/map.html
+++ b/travel/templates/travel/map.html
@@ -1,127 +1,57 @@
-{% extends 'admin/base_site.html' %}
-{% load static %}
+{% extends 'travel/base.html' %}
+{% load static header data_filter panel %}
 
 {% block title %}Indicadores: Mapa{% endblock %}
 
 {% block css %}
+    {{ block.super }}
     <link href="{% static "components/leaflet/dist/leaflet.css" %}" rel="stylesheet">
     {% with "components/gentelella/vendors/" as gentelella_static %}
-        <link href="{% static gentelella_static|add:"bootstrap-daterangepicker/daterangepicker.css" %}"
-              rel="stylesheet">
-        <link href="{% static gentelella_static|add:"pnotify/dist/pnotify.css" %}" rel="stylesheet">
-        <link href="{% static gentelella_static|add:"pnotify/dist/pnotify.buttons.css" %}" rel="stylesheet">
-        <link href="{% static gentelella_static|add:"pnotify/dist/pnotify.nonblock.css" %}" rel="stylesheet">
-        <link href="{% static gentelella_static|add:"select2/dist/css/select2.min.css" %}" rel="stylesheet">
-
         {# switchery: pretty checkboxes #}
         <link href="{% static gentelella_static|add:"switchery/dist/switchery.min.css" %}" rel="stylesheet">
-
-        <!-- iCheck -->
-        <link href="{% static gentelella_static|add:"iCheck/skins/flat/green.css" %}" rel="stylesheet">
     {% endwith %}
-
     <link href="{% static "travel/css/generic.css" %}" rel="stylesheet">
     <link href="{% static "travel/css/map.css" %}" rel="stylesheet">
-
 {% endblock %}
 
 {% block content %}
-
-
     <div class="">
 
-    {% include "./titlebar.html" with titlename="Mapa de Viajes" %}
-        {% include "./filters.html" %}
+        {% header "Mapa de viajes" "Indicadores" %}
+        {% include "datamanager/availableDays.html" %}
+        {% data_filter data_filter True False True False False False False False False False False False True %}
 
         <div class="row cols-same-height">
-
             {# Selection Bar #}
             <div class="col-lg-3 col-md-12 col-sm-12 col-xs-12">
-                <div class="x_panel">
-                    <div class="x_title">
-                        <h2><i class="fa fa-tasks"></i> ¿Qué desea visualizar?
-                            <small></small>
-                        </h2>
-                        <div class="clearfix"></div>
-                    </div>
-                    <div class="x_content">
-
-                        <div class="row viz-option-row">
-                            <div class="col-md-12 col-sm-12 col-xs-12 form-group">
-                                <label class="control-label" for="sectorSelector">Sector de Destino:</label>
-                                <select class="form-control" id='sectorSelector' style="width: 100%">
-                                </select>
-                            </div>
-                        </div>
-
-                        <div class="row viz-option-row">
-                            <div class="col-md-12 col-sm-12 col-xs-12 form-group">
-                                <label class="control-label" for="vizSelector">Variable a mostrar:</label>
-                                <select class="form-control" id='vizSelector' style="width: 100%">
-                                </select>
-                            </div>
-                        </div>
-
-                        <div class="row viz-option-row">
-                            <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 form-group">
-                                <label>Escala de colores:</label>
-                            </div>
-                            <div class="col-lg-12 col-md-4 col-sm-4 col-xs-6 form-group">
-                                <div class="colorscale_checkbox_div">
-                                    <span class="control-label">Divergente</span>
-                                    <input id="colorscale_checkbox" type="checkbox" />
-                                    <span class="control-label">Secuencial</span>
-                                </div>
-                            </div>
-                        </div>
-
-                    </div>
-                </div>
+                {% panel "fa-tasks" "¿Qué desea visualizar?" selectors %}
             </div>
-
             {# Map #}
             <div class="col-lg-9 col-md-12 col-sm-12 col-xs-12">
-                <div class="x_panel">
-                    <div class="x_title">
-                        <h2><i class="fa fa-map-o"></i> <span id="mapTitle">Mapa</span>
-                            <span id="visualization_doc_count">0</span> <span id="visualization_doc_count_txt">datos</span>
-                        </h2>
-                        <div class="clearfix"></div>
-                    </div>
-                    <div class="x_content" style="height:500px">
-                        <div id="mapChart" style="height:inherit"></div>
-                    </div>
-                </div>
+                {% with panel_body="<div id='mapChart' style='height:500px'></div>" %}
+                    {% panel "fa-map-o" "<span id='mapTitle'>Mapa</span> <span id='visualization_doc_count'>0</span> <span id='visualization_doc_count_txt'>datos</span>" panel_body title_id="mapTitle" %}
+                {% endwith %}
             </div>
         </div>
-
     </div>
 {% endblock %}
 
 {% block js %}
+    {{ block.super }}
     <script src="{% static "components/leaflet/dist/leaflet.js" %}"></script>
     {% with "components/gentelella/vendors/" as gentelella_static %}
-        <script src="{% static gentelella_static|add:"moment/min/moment-with-locales.min.js" %}"></script>
-        <script src="{% static gentelella_static|add:"bootstrap-daterangepicker/daterangepicker.js" %}"></script>
-        <script src="{% static gentelella_static|add:"jquery.tagsinput/src/jquery.tagsinput.js" %}"></script>
-        <script src="{% static gentelella_static|add:"pnotify/dist/pnotify.js" %}"></script>
-        <script src="{% static gentelella_static|add:"pnotify/dist/pnotify.buttons.js" %}"></script>
-        <script src="{% static gentelella_static|add:"pnotify/dist/pnotify.nonblock.js" %}"></script>
-        <script src="{% static gentelella_static|add:"select2/dist/js/select2.min.js" %}"></script>
-        <script src="{% static gentelella_static|add:"jquery-sparkline/dist/jquery.sparkline.min.js" %}"></script>
-        <script src="{% static gentelella_static|add:"iCheck/icheck.min.js" %}"></script>
-
         {# switchery: pretty checkboxes #}
         <script src="{% static gentelella_static|add:"switchery/dist/switchery.min.js" %}"></script>
-
     {% endwith %}
+    <!-- <script src="{% static "travel/js/map.js" %}"></script>
+    <script src="{% static "travel/js/mapApp.js" %}"></script> -->
 
     <script>
         var ws_data = {};
-        ws_data._day_types = JSON.parse("{{ daytypes|escapejs }}");
-        ws_data._TS_periods = {{ timeperiods|safe }};
-        ws_data._half_hours = {{ halfhours|safe }};
-        ws_data._communes = {{ communes|safe }};
+        //ws_data._day_types = JSON.parse("{{ daytypes|escapejs }}");
+        //ws_data._TS_periods = {{ timeperiods|safe }};
+        //ws_data._half_hours = {{ halfhours|safe }};
+        //ws_data._communes = {{ communes|safe }};
         ws_data._map_sectors = JSON.parse("{{ sectors|escapejs }}");
         // console.log(ws_data._day_types);
         // console.log(ws_data._TS_periods);
@@ -129,11 +59,9 @@
         // console.log(ws_data._communes);
         // console.log(ws_data._map_sectors);
     </script>
-
     <script src="{% static "travel/js/util.js" %}"></script>
     <script src="{% static "travel/js/maps.js" %}"></script>
     <script src="{% static "travel/js/form.js" %}"></script>
     <script src="{% static "travel/js/travel_map_options.js" %}"></script>
     <script src="{% static "travel/js/travel_map.js" %}"></script>
-
 {% endblock %}
