updated html title

--- a/travel/templates/travel/strategies.html
+++ b/travel/templates/travel/strategies.html
@@ -1,7 +1,7 @@
 {% extends 'travel/base.html' %}
 {% load static header data_filter panel %}
 
-{% block title %}Indicadores: Viajes por Etapas{% endblock %}
+{% block title %}Indicadores: Estrategias de viaje{% endblock %}
 
 {% block css %}
     {{ block.super }}
