--- a/travel/templates/travel/from_to.html
+++ b/travel/templates/travel/from_to.html
@@ -1,188 +1,63 @@
-{% extends 'admin/base_site.html' %}
-{% load static %}
+{% extends 'travel/base.html' %}
+{% load static header panel data_filter columns %}
 
-{% block title %}Indicadores: Viajes por Etapas{% endblock %}
+{% block title %}Indicadores: Orígenes y destinos{% endblock %}
 
 {% block css %}
+    {{ block.super }}
     <link href="{% static "components/leaflet/dist/leaflet.css" %}" rel="stylesheet">
     {% with "components/gentelella/vendors/" as gentelella_static %}
-        <link href="{% static gentelella_static|add:"bootstrap-daterangepicker/daterangepicker.css" %}"
-              rel="stylesheet">
-      <link href="{% static gentelella_static|add:"ion.rangeSlider/css/ion.rangeSlider.css" %}" rel="stylesheet">
-      <link href="{% static gentelella_static|add:"ion.rangeSlider/css/ion.rangeSlider.skinModern.css" %}" rel="stylesheet">
-        <link href="{% static gentelella_static|add:"pnotify/dist/pnotify.css" %}" rel="stylesheet">
-        <link href="{% static gentelella_static|add:"pnotify/dist/pnotify.buttons.css" %}" rel="stylesheet">
-        <link href="{% static gentelella_static|add:"pnotify/dist/pnotify.nonblock.css" %}" rel="stylesheet">
-        <link href="{% static gentelella_static|add:"select2/dist/css/select2.min.css" %}" rel="stylesheet">
-
         {# switchery: pretty checkboxes #}
         <link href="{% static gentelella_static|add:"switchery/dist/switchery.min.css" %}" rel="stylesheet">
-
-        <!-- iCheck -->
-        <link href="{% static gentelella_static|add:"iCheck/skins/flat/green.css" %}" rel="stylesheet">
     {% endwith %}
-
     <link href="{% static "travel/css/generic.css" %}" rel="stylesheet">
     <link href="{% static "travel/css/large.css" %}" rel="stylesheet">
     <link href="{% static "travel/css/fromto.css" %}" rel="stylesheet">
-
 {% endblock %}
 
 {% block content %}
-
-
     <div class="">
-
-        {% include "./titlebar.html" with titlename="Viajes por Etapas" %}
-        {% include "./filters_fromto.html" %}
+        {% header "Orígenes y destinos" "Indicadores" %}
+        {% include "datamanager/availableDays.html" %}
+        {% columns 12 12 12 "Número de etapas<br />"|add:stage_selectors as col1 %}
+        {% columns 12 12 12 "Modo de viaje<br />"|add:mode_selectors as col2 %}
+        {% with extra_html=col1|add:col2 %}
+            {% data_filter data_filter show_day_filter=True show_day_type_filter=True show_start_trip_period_filter=True show_start_trip_minute_filter=True extra_html=extra_html %}
+        {% endwith %}
 
         <div class="row cols-same-height">
-            <div class="col-lg-4 col-md-4 col-sm-4 col-xs-4">
-                <div class="x_panel">
-                    <div class="x_title">
-                        <h2><i class="fa fa-list"></i> Número de etapas</h2>
-                        <div class="clearfix"></div>
-                    </div>
-                    <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 form-group">
-                        <div class="netapas_checkbox_div">
-                            <input id="netapas_1" type="checkbox" class="netapas_checkbox" data-ne-str="1" />
-                            <span class="control-label">1 etapa</span>
-                        </div>
-                    </div>
-                    <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 form-group">
-                        <div class="netapas_checkbox_div">
-                            <input id="netapas_2" type="checkbox" class="netapas_checkbox" data-ne-str="2" />
-                            <span class="control-label">2 etapas</span>
-                        </div>
-                    </div>
-                    <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 form-group">
-                        <div class="netapas_checkbox_div">
-                            <input id="netapas_3" type="checkbox" class="netapas_checkbox" data-ne-str="3" />
-                            <span class="control-label">3 etapas</span>
-                        </div>
-                    </div>
-                    <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 form-group">
-                        <div class="netapas_checkbox_div">
-                            <input id="netapas_4" type="checkbox" class="netapas_checkbox" data-ne-str="4" />
-                            <span class="control-label">4 etapas</span>
-                        </div>
-                    </div>
-                    <div class="x_title">
-                        <h2><i class="fa fa-subway"></i> Modos de viaje</h2>
-                        <div class="clearfix"></div>
-                    </div>
-                    <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 form-group">
-                        <div class="modos_checkbox_div">
-                            <input id="B" type="checkbox" class="modes_checkbox" data-ne-str="1" />
-                            <span class="control-label">Bus</span>
-                        </div>
-                    </div>
-                    <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 form-group">
-                        <div class="modos_checkbox_div">
-                            <input id="M" type="checkbox" class="modes_checkbox" data-ne-str="2" />
-                            <span class="control-label">Metro</span>
-                        </div>
-                    </div>
-                    <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 form-group">
-                        <div class="modos_checkbox_div">
-                            <input id="T" type="checkbox" class="modes_checkbox" data-ne-str="4" />
-                            <span class="control-label">MetroTren</span>
-                        </div>
-                    </div>
-                    <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 form-group">
-                        <div class="modos_checkbox_div">
-                            <input id="BM" type="checkbox" class="modes_checkbox" data-ne-str="3" />
-                            <span class="control-label">Bus + Metro</span>
-                        </div>
-                    </div>
-                    <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 form-group">
-                        <div class="modos_checkbox_div">
-                            <input id="BT" type="checkbox" class="modes_checkbox" data-ne-str="5" />
-                            <span class="control-label">Bus + Metrotren</span>
-                        </div>
-                    </div>
-                    <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 form-group">
-                        <div class="modos_checkbox_div">
-                            <input id="MT" type="checkbox" class="modes_checkbox" data-ne-str="6" />
-                            <span class="control-label">Metro + Metrotren</span>
-                        </div>
-                    </div>
-                    <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 form-group">
-                        <div class="modos_checkbox_div">
-                            <input id="BMT" type="checkbox" class="modes_checkbox" data-ne-str="7" />
-                            <span class="control-label">Bus + Metro + Metrotren</span>
-                        </div>
-                    </div>
-                </div>
-            </div>
-
-            <div class="col-lg-8 col-md-8 col-sm-8 col-xs-8">
-                <div class="x_panel">
-                    <div class="x_title">
-                        <h2><i class="fa fa-map-o"></i> <span id="mapTitle">Mapa</span>
-                            <span id="visualization_doc_count">0</span> <span id="visualization_doc_count_txt">datos</span>
-                        </h2>
-                        <div class="clearfix"></div>
-                    </div>
-                    <div class="x_title col-lg-6 col-md-12 col-sm-12 col-xs-12">
-                        <div class="x_title">
-                            <h2>Origen</h2>
-                            <div class="clearfix"></div>
-                        </div>
-                        <div class="x_content" style="height:500px">
-                            <div id="mapChart" style="height:inherit;"></div>
-                        </div>
-                    </div>
-                    <div class="x_title col-lg-6 col-md-12 col-sm-12 col-xs-12">
-                        <div class="x_title">
-                            <h2>Destino</h2>
-                            <div class="clearfix"></div>
-                        </div>
-                        <div class="x_content" style="height:500px">
-                            <div id="mapChart2" style="height:inherit;"></div>
-                        </div>
-                    </div>
-                </div>
+            <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
+                {% with map1="<div id='mapChart' style='height:500px;'></div>" map2="<div id='mapChart2' style='height:500px;'></div>" %}
+                    {% columns 6 6 12 "<h3>Orígen</h3><br />"|add:map1 as col1 %}
+                    {% columns 6 6 12 "<h3>Destino</h3><br />"|add:map2 as col2 %}
+                    {% panel "fa-map-o" "<span id='mapTitle'>Mapa</span> <span id='visualization_doc_count'>0</span> <span id='visualization_doc_count_txt'>datos</span>" col1|add:col2 %}
+                {% endwith %}
             </div>
         </div>
-
     </div>
 {% endblock %}
 
 {% block js %}
+    {{ block.super }}
     <script src="{% static "components/leaflet/dist/leaflet.js" %}"></script>
     {% with "components/gentelella/vendors/" as gentelella_static %}
-        <script src="{% static gentelella_static|add:"moment/min/moment-with-locales.min.js" %}"></script>
-        <script src="{% static gentelella_static|add:"bootstrap-daterangepicker/daterangepicker.js" %}"></script>
-        <script src="{% static gentelella_static|add:"jquery.tagsinput/src/jquery.tagsinput.js" %}"></script>
-        <script src="{% static gentelella_static|add:"ion.rangeSlider/js/ion.rangeSlider.min.js" %}"></script>
-        <script src="{% static gentelella_static|add:"pnotify/dist/pnotify.js" %}"></script>
-        <script src="{% static gentelella_static|add:"pnotify/dist/pnotify.buttons.js" %}"></script>
-        <script src="{% static gentelella_static|add:"pnotify/dist/pnotify.nonblock.js" %}"></script>
-        <script src="{% static gentelella_static|add:"select2/dist/js/select2.min.js" %}"></script>
-        <script src="{% static gentelella_static|add:"jquery-sparkline/dist/jquery.sparkline.min.js" %}"></script>
-        <script src="{% static gentelella_static|add:"iCheck/icheck.min.js" %}"></script>
         {# switchery: pretty checkboxes #}
         <script src="{% static gentelella_static|add:"switchery/dist/switchery.min.js" %}"></script>
-
     {% endwith %}
-
     <script>
         var ws_data = {};
-        ws_data._day_types = JSON.parse("{{ daytypes|escapejs }}");
-        ws_data._TS_periods = {{ timeperiods|safe }};
-        ws_data._half_hours = {{ halfhours|safe }};
-        ws_data._communes = {{ communes|safe }};
+        //ws_data._day_types = JSON.parse("{{ daytypes|escapejs }}");
+        //ws_data._TS_periods = {{ timeperiods|safe }};
+        //ws_data._half_hours = {{ halfhours|safe }};
+        //ws_data._communes = {{ communes|safe }};
         // console.log(ws_data._day_types);
         // console.log(ws_data._TS_periods);
         // console.log(ws_data._half_hours);
         // console.log(ws_data._communes);
     </script>
-
     <script src="{% static "travel/js/util.js" %}"></script>
     <script src="{% static "travel/js/maps.js" %}"></script>
     <script src="{% static "travel/js/form.js" %}"></script>
     <script src="{% static "travel/js/travel_fromto_options.js" %}"></script>
     <script src="{% static "travel/js/travel_fromto.js" %}"></script>
-
 {% endblock %}
