--- a/travel/templates/travel/from_to.html
+++ b/travel/templates/travel/from_to.html
@@ -28,7 +28,7 @@
         <div class="row cols-same-height">
             <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
                 {% with map1="<div id='mapChart' style='height:500px;'></div>" map2="<div id='mapChart2' style='height:500px;'></div>" %}
-                    {% columns 6 6 12 "<h3>Orígen</h3><br />"|add:map1 as col1 %}
+                    {% columns 6 6 12 "<h3>Origen</h3><br />"|add:map1 as col1 %}
                     {% columns 6 6 12 "<h3>Destino</h3><br />"|add:map2 as col2 %}
                     {% panel "fa-map-o" "<span id='mapTitle'>Mapa</span> <span id='visualization_doc_count'>0</span> <span id='visualization_doc_count_txt'>datos</span>" col1|add:col2 %}
                 {% endwith %}
