commented unused data

--- a/travel/templates/travel/strategies.html
+++ b/travel/templates/travel/strategies.html
@@ -65,7 +65,7 @@
 
     <script>
         var ws_data = {};
-        ws_data._day_types = JSON.parse("{{ daytypes|escapejs }}");
+        //ws_data._day_types = JSON.parse("{{ daytypes|escapejs }}");
         //ws_data._TS_periods = {{ timeperiods|safe }};
         //ws_data._half_hours = {{ halfhours|safe }};
         //ws_data._communes = {{ communes|safe }};
