--- a/travel/templates/travel/strategies.html
+++ b/travel/templates/travel/strategies.html
@@ -32,7 +32,7 @@
 
     <div class="row">
         <div class="col-md-12 col-sm-12 col-xs-12">
-            {% with panel_body="<table id='tupleDetail' class='table table-striped table-bordered dt-responsive table-condensed nowrap' width='100%'><thead><tr><th></th><th></th><th></th><th></th><th></th><th></th><th></th></tr></thead></table>" %}
+            {% with panel_body="<table id='tupleDetail' class='table table-striped table-bordered dt-responsive table-condensed nowrap' width='100%'><thead><tr><th></th><th></th><th></th><th></th><th></th></tr></thead></table>" %}
                 {% panel "fa-chain" "Estrategias utilizadas" panel_body %}
             {% endwith %}
         </div>
@@ -50,9 +50,11 @@
         <script src="{% static gentelella_static|add:"datatables.net-responsive-bs/js/responsive.bootstrap.js" %}"></script>
         <script src="{% static gentelella_static|add:"datatables.net-scroller/js/dataTables.scroller.min.js" %}"></script>
     {% endwith %}
+    <script>
+    var ws_data = {};
+    </script>>
     <script src="{% static "travel/js/util.js" %}"></script>
     <script src="{% static "travel/js/maps.js" %}"></script>
-    <script src="{% static "travel/js/form.js" %}"></script>
     <script src="{% static "travel/js/travel_strategies_options.js" %}"></script>
     <script src="{% static "travel/js/travel_strategies.js" %}"></script>
 {% endblock %}
