--- a/templates/admin/base_site.html
+++ b/templates/admin/base_site.html
@@ -115,7 +115,7 @@
                 {% if user.has_usable_password %}
                 <li><a href="{% url 'admin:password_change' %}"><i class="fa fa-edit pull-right"></i> Cambiar contraseña</a></li>
                 {% endif %}
-                <li><a href="{% url 'admin:logout' %}"><i class="fa fa-sign-out pull-right"></i> Cerrar sesión</a></li>
+                <li><a href="{% url 'logout' %}"><i class="fa fa-sign-out pull-right"></i> Cerrar sesión</a></li>
               </ul>
             </li>
           </ul>
