--- a/templates/registration/logged_out.html
+++ b/templates/registration/logged_out.html
@@ -16,7 +16,7 @@
         <h1>{% trans "Fin de sesión" %}</h1>
         
         <p>{% trans "Thanks for spending some quality time with the Web site today." %}</p>
-        <p><a class="btn btn-success btn-lg" href="{% url 'admin:index' %}">{% trans 'Log in again' %}</a></p>
+        <p><a class="btn btn-success btn-lg" href="{% url 'index' %}">{% trans 'Log in again' %}</a></p>
 
         <div class="clearfix"></div> 
 
