--- a/shape/templates/shape/mapBase.html
+++ b/shape/templates/shape/mapBase.html
@@ -8,7 +8,7 @@
   <link rel="stylesheet" href="{% static "components/leaflet/dist/leaflet.css" %}">
   <link rel="stylesheet" href="{% static "components/Leaflet.EasyButton/src/easy-button.css" %}">
   <link rel="stylesheet" href="{% static "components/leaflet-control-window/src/L.Control.Window.css" %}">
-  <link rel="stylesheet" href="{% static "components/leaflet-control-topcenter/dist/leaflet-control-topcenter.min.css" %}">
+  <link rel="stylesheet" href="{% static "components/leaflet-control-topcenter/dist/leaflet-control-topcenter.css" %}">
   {% with "components/gentelella/vendors/" as gentelella_static %}
     <link rel="stylesheet" href="{% static gentelella_static|add:"iCheck/skins/flat/green.css" %}">
   {% endwith %}
@@ -65,7 +65,7 @@
   <script src="{% static "components/leaflet-polylinedecorator/dist/leaflet.polylineDecorator.js" %}"></script>
   <script src="{% static "components/Leaflet.EasyButton/src/easy-button.js" %}"></script>
   <script src="{% static "components/leaflet-control-window/src/L.Control.Window.js" %}"></script>
-  <script src="{% static "components/leaflet-control-topcenter/dist/leaflet-control-topcenter.min.js" %}"></script>
+  <script src="{% static "components/leaflet-control-topcenter/dist/leaflet-control-topcenter.js" %}"></script>
   <script src="{% static "js/longArrowHead.js" %}"></script>
   <script src="{% static "js/app.js" %}"></script>
   <script>
