added modals to show help

--- a/datamanager/templates/datamanager/availableDays.html
+++ b/datamanager/templates/datamanager/availableDays.html
@@ -3,6 +3,6 @@
 <div class="row">
     <div class="col-md-12 col-sm-12 col-xs-12">
         {% columns 12 12 12 "<div id='availableDays' style='height:170px;'></div>" as col %}
-        {% panel "fa-calendar" "Días disponibles" col show_collapse=True %}
+        {% panel "fa-calendar" "Días disponibles" col show_collapse=True info_target_id=info_target_id %}
     </div>
 </div>
