--- a/profile/templates/profile/byExpedition.html
+++ b/profile/templates/profile/byExpedition.html
@@ -7,9 +7,9 @@
     {% label "OBSERVACIÓN: Los datos mostrados a continuación no consideran evasión." "warning" as label %}
     {% header "Perfil de carga" "por servicio"|add:label %}
 
-    {% include "datamanager/availableDays.html" %}
+    {% include "datamanager/availableDays.html" with info_target_id="#dayHelp" %}
 
-    {% data_filter data_filter True False True False False True False True True True True info_target_id="filterHelp"%}
+    {% data_filter data_filter True False True False False True False True True True True info_target_id="#filterHelp"%}
 
     <div class="row">
         {% panel "fa-clock-o" "Expediciones por hora de inicio" '<div id="timePeriodChart" style="height:50px;"></div>' as panel1 %}
@@ -21,7 +21,7 @@
         {% panel "fa-calendar" "Expediciones por tipo de día" '<div id="wordcloudChart2" style="height:50px;"></div>' as panel3 %}
         {% columns 4 4 4 panel3 %}
 
-        {% panel "fa-bar-chart" "Perfil de carga <small>para <strong id='expeditionNumber'>N</strong> expediciones</small>" '<div id="barChart" style="height:600px;"></div>' as panel4 %}
+        {% panel "fa-bar-chart" "Perfil de carga <small>para <strong id='expeditionNumber'>N</strong> expediciones</small>" '<div id="barChart" style="height:600px;"></div>' info_target_id="#chartHelp" as panel4 %}
         {% columns 12 12 12 panel4 %}
     </div>
 
@@ -32,7 +32,9 @@
         </div>
     </div>
 
-    {% include "datamanager/modal.html" with modal_id="filterHelp" modal_title="Prueba" modal_body="esto es una prueba" %}
+    {% include "datamanager/modal.html" with modal_id="dayHelp" modal_title="Prueba" modal_body="esto es una explicación del filtro de día" %}
+    {% include "datamanager/modal.html" with modal_id="filterHelp" modal_title="Prueba" modal_body="esto es una explicación de los filtros posibles" %}
+    {% include "datamanager/modal.html" with modal_id="chartHelp" modal_title="Prueba" modal_body="esto es una explicación del gráfico" %}
 {% endblock %}
 
 {% block js %}
