--- a/profile/templates/profile/byStop.html
+++ b/profile/templates/profile/byStop.html
@@ -7,30 +7,35 @@
     {% label "OBSERVACIÓN: Los datos mostrados a continuación no consideran evasión." "warning" as label %}
     {% header "Perfil de carga" "por parada"|add:label %}
 
-    {% include "datamanager/availableDays.html" %}
+    {% include "datamanager/availableDays.html" with info_target_id="dayHelp" %}
 
-    {% data_filter data_filter True True True False True False True False False False False %}
+    {% data_filter data_filter True True True False True False True False False False False info_target_id="filterHelp" %}
 
-  <div class="row">
-    {% panel "fa-clock-o" "Expediciones por hora de inicio" '<div id="timePeriodChart" style="height:50px;"></div>' as panel1 %}
-    {% columns 4 4 4 panel1 %}
+    <div class="row">
+        {% panel "fa-clock-o" "Expediciones por hora de inicio" '<div id="timePeriodChart" style="height:50px;"></div>' as panel1 %}
+        {% columns 4 4 4 panel1 %}
 
-    {% panel "fa-truck" 'Expediciones por patente <strong id="licensePlateNumber">(0)</strong>' '<div id="wordcloudChart1" style="height:50px;"></div>' as panel2 %}
-    {% columns 4 4 4 panel2 %}
+        {% panel "fa-truck" 'Expediciones por patente <strong id="licensePlateNumber">(0)</strong>' '<div id="wordcloudChart1" style="height:50px;"></div>' as panel2 %}
+        {% columns 4 4 4 panel2 %}
 
-    {% panel "fa-calendar" "Expediciones por tipo de día" '<div id="wordcloudChart2" style="height:50px;"></div>' as panel3 %}
-    {% columns 4 4 4 panel3 %}
+        {% panel "fa-calendar" "Expediciones por tipo de día" '<div id="wordcloudChart2" style="height:50px;"></div>' as panel3 %}
+        {% columns 4 4 4 panel3 %}
 
-    {% panel "fa-bar-chart" "Perfil de carga <small>para <strong id='expeditionNumber'>N</strong> expediciones</small>" '<div id="barChart" style="height:400px;"></div>' as panel4 %}
-    {% columns 12 12 12 panel4 %}
-  </div>
-
-  <div class="row">
-    <div class="col-md-12 col-sm-12 col-xs-12">
-      {% table "expeditionDetail" 9 as expeditionTable %}
-      {% panel "fa-truck" "Expediciones (<strong id='expeditionNumber2'>N</strong>)" expeditionTable %}
+        {% panel "fa-bar-chart" "Perfil de carga <small>para <strong id='expeditionNumber'>N</strong> expediciones</small>" '<div id="barChart" style="height:400px;"></div>' info_target_id="chartHelp" as panel4 %}
+        {% columns 12 12 12 panel4 %}
     </div>
-  </div>
+
+    <div class="row">
+        <div class="col-md-12 col-sm-12 col-xs-12">
+            {% table "expeditionDetail" 9 as expeditionTable %}
+            {% panel "fa-truck" "Expediciones (<strong id='expeditionNumber2'>N</strong>)" expeditionTable info_target_id="tableHelp" %}
+        </div>
+    </div>
+
+    {% include "datamanager/modal.html" with modal_id="dayHelp" modal_title="Días disponibles" modal_body="esto es una explicación del filtro de día" %}
+    {% include "datamanager/modal.html" with modal_id="filterHelp" modal_title="Filtro" modal_body="esto es una explicación de los filtros posibles" %}
+    {% include "datamanager/modal.html" with modal_id="chartHelp" modal_title="Perfil de carga" modal_body="esto es una explicación del gráfico" %}
+    {% include "datamanager/modal.html" with modal_id="tableHelp" modal_title="Expediciones" modal_body="esto es una explicación de la tabla" %}
 {% endblock %}
 
 {% block js %}
