--- a/speed/templates/speed/matrix.html
+++ b/speed/templates/speed/matrix.html
@@ -39,24 +39,29 @@
     <div class="">
     {% header "Matriz de Velocidades" "por servicio" %}
 
-    {% include "datamanager/availableDays.html" %}
+    {% include "datamanager/availableDays.html" with info_target_id="dayHelp" %}
 
-    {% data_filter data_filter True False True False False False False False True True True %}
+    {% data_filter data_filter True False True False False False False False True True True info_target_id="filterHelp" %}
 
     <div class="row">
         <div class="col-md-12 col-sm-12 col-xs-12">
             {% with "<div id='main' style='height:400px;'></div>" as chart %}
-                {% panel "fa-tachometer" "Matriz de velocidades: <span id='route_name'></span>" chart %}
+                {% panel "fa-tachometer" "Matriz de velocidades: <span id='route_name'></span>" chart info_target_id="chartHelp" %}
             {% endwith %}
         </div>
     </div>
     <div class="row">
         <div class="col-md-12 col-xs-12">
             {% with "<label class='control-label' for='filterHourRange'>Horario:</label><input type='text' id='filterHourRange' name='hour_range' value=''/><div id='mapid' style='height: 500px;min-height: 500px'></div>" as map %}
-                {% panel "fa-map" "Posición en el mapa" map %}
+                {% panel "fa-map" "Posición en el mapa" map info_target_id="mapHelp" %}
             {% endwith %}
         </div>
     </div>
+
+    {% include "datamanager/modal.html" with modal_id="dayHelp" modal_title="Días disponibles" modal_body="esto es una explicación del filtro de día" %}
+    {% include "datamanager/modal.html" with modal_id="filterHelp" modal_title="Filtro" modal_body="esto es una explicación de los filtros posibles" %}
+    {% include "datamanager/modal.html" with modal_id="chartHelp" modal_title="Matriz de velocidades" modal_body="esto es una explicación del gráfico" %}
+    {% include "datamanager/modal.html" with modal_id="mapHelp" modal_title="Posición en el mapa" modal_body="esto es una explicación de la tabla" %}
 {% endblock %}
 
 {% block js %}
