--- a/speed/templates/speed/variation.html
+++ b/speed/templates/speed/variation.html
@@ -17,18 +17,22 @@
     <div class="">
         {% header "Variación de velocidades" "por servicio" %}
 
-        {% include "datamanager/availableDays.html" %}
+        {% include "datamanager/availableDays.html" with  info_target_id="dayHelp" %}
 
-        {% data_filter data_filter True False True False False False False False True True False %}
+        {% data_filter data_filter True False True False False False False False True True False  info_target_id="filterHelp" %}
 
         <div class="row">
             <div class="col-md-12 col-sm-12 col-xs-12">
                 {% with panel_body="<div id='main' style='height:200px;'></div>" %}
-                    {% panel "fa-tachometer" "Variación de velocidades" panel_body %}
+                    {% panel "fa-tachometer" "Variación de velocidades" panel_body info_target_id="chartHelp" %}
                 {% endwith %}
             </div>
         </div>
     </div>
+
+    {% include "datamanager/modal.html" with modal_id="dayHelp" modal_title="Días disponibles" modal_body="esto es una explicación del filtro de día" %}
+    {% include "datamanager/modal.html" with modal_id="filterHelp" modal_title="Filtro" modal_body="esto es una explicación de los filtros posibles" %}
+    {% include "datamanager/modal.html" with modal_id="chartHelp" modal_title="Variación de velocidades" modal_body="esto es una explicación del gráfico" %}
 {% endblock %}
 
 {% block js %}
