--- a/globalstat/templates/globalstat/resume.html
+++ b/globalstat/templates/globalstat/resume.html
@@ -27,5 +27,5 @@
 
 {% block js %}
     {{ block.super }}
-    <script src="{% static "js/resume.js" %}"></script>
+    <script src="{% static "globalstat/js/resume.js" %}"></script>
 {% endblock %}
