--- a/globalstat/templates/globalstat/detail.html
+++ b/globalstat/templates/globalstat/detail.html
@@ -49,5 +49,5 @@
 
 {% block js %}
     {{ block.super }}
-    <script src="{% static "js/detail.js" %}"></script>
+    <script src="{% static "globalstat/js/detail.js" %}"></script>
 {% endblock %}
