--- a/profile/templates/profile/byStop.html
+++ b/profile/templates/profile/byStop.html
@@ -40,5 +40,5 @@
 
 {% block js %}
     {{ block.super }}
-    <script src="{% static "js/byStop.js" %}"></script>
+    <script src="{% static "profile/js/byStop.js" %}"></script>
 {% endblock %}
