--- a/profile/templates/profile/odmatrix.html
+++ b/profile/templates/profile/odmatrix.html
@@ -29,5 +29,5 @@
 
 {% block js %}
     {{ block.super }}
-    <script src="{% static "js/odmatrix.js" %}"></script>
+    <script src="{% static "profile/js/odmatrix.js" %}"></script>
 {% endblock %}
