--- a/profile/templates/profile/transfers.html
+++ b/profile/templates/profile/transfers.html
@@ -43,5 +43,5 @@
 
 {% block js %}
     {{ block.super }}
-    <script src="{% static "js/transfers.js" %}"></script>
+    <script src="{% static "profile/js/transfers.js" %}"></script>
 {% endblock %}
