--- a/profile/templates/profile/byExpedition.html
+++ b/profile/templates/profile/byExpedition.html
@@ -43,5 +43,5 @@
     {% with "components/gentelella/vendors/" as gentelella_static %}
         <script src="{% static gentelella_static|add:"jquery-sparkline/dist/jquery.sparkline.min.js" %}"></script>
     {% endwith %}
-    <script src="{% static "js/byExpedition.js" %}"></script>
+    <script src="{% static "profile/js/byExpedition.js" %}"></script>
 {% endblock %}
