added button selector

--- a/profile/templates/profile/odmatrix.html
+++ b/profile/templates/profile/odmatrix.html
@@ -12,13 +12,14 @@
     {% data_filter data_filter True False True True False False False False True True True info_target_id="filterHelp" %}
 
     <div class="row">
-        {% with toggleButton='<input id="chartSwitch" type="checkbox" data-toggle="toggle" data-on="Mostrando bajadas" data-off="Mostrando Subidas" data-size="large" data-width="270">' %}
-            {% columns 12 12 12 toggleButton as col7 %}
-        {% endwith %}
         {% panel "fa-bar-chart" "Matriz de etapas" '<div id="matrixChart" style="height:600px;"></div>' info_target_id="chartHelp" as panel4 %}
-        {% panel "fa-bar-chart" "Etapas de una parada" '<div class="btn-group btn-group-xs" id="stops"></div><div id="graphChart" style="height:300px;"></div>' info_target_id="chart2Help" as panel5 %}
-        {% columns 12 12 12 panel4 %}
-        {% columns 12 12 12 panel5 %}
+
+        {% with radioButton='<p>¿Qué desea buscar?:</p><div class="radio-inline"><label><input type="radio" class="flat" name="stopSelector" checked> Paradero de subida</label></div><div class="radio-inline"><label><input type="radio" class="flat" name="stopSelector"> Paradero de bajada</label></div>' %}
+            {% columns 12 12 12 toggleButton as col7 %}
+            {% panel "fa-bar-chart" "Etapas de una parada" radioButton|add:'<div class="btn-group btn-group-xs" id="stops"></div><div id="graphChart" style="height:300px;"></div>' info_target_id="chart2Help" as panel5 %}
+            {% columns 12 12 12 panel4 %}
+            {% columns 12 12 12 panel5 %}
+        {% endwith %}
     </div>
 
     {% include "datamanager/modal.html" with modal_id="dayHelp" modal_title="Días disponibles" modal_body="esto es una explicación del filtro de día" %}
